--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,12 @@ code {
     monospace;
 }
 
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 button {
